<resources>
    <string name="app_name">মাতৃত্ব</string>
    <string name="prepregnancy_button">কবে দেখবো </string>
    <string name="doctors_suggestion_button">ডাক্তার এর পরামর্শ</string>
    <string name="baby_button">কেমন আছে আমার সন্তান</string>
    <string name="food_value_button">খাবার এর পরামর্শ</string>
    <string name="medicine_alarm_button">অ্যালার্ম</string>
    <string name="space_button">আমার ভালোলাগা</string>
    <string name="emergency_button">জরুরি সাহায্যে কল করুন</string>
    <string name="call_1">ডাঃ সায়মা ইসলাম মিশি \nআর্মড ফোরসেস মেডিকেল কলেজ এন্ড হসপিটাল,\nঢাকা-১২১৬\n</string>
    <string name="call_2">ডাঃ আনোয়ারা বেগম \nঢাকা মেডিকেল কলেজ হসপিটাল,\nঢাকা-১২১৬\n</string>

    <string name="awareness_text">
    </string>
    <string name="first_week_text">প্রথম সপ্তাহের এ সময়টিতে আপনি ঠিক গর্ভবতী নন, কারন গর্ভসঞ্চারের ব্যাপারটি আপনার মাসিক শেষের দুই সপ্তাহ পর ঘটে থাকে। প্রতিবার মাসিক এর পরেই আপনার শরীর অনেক জটিল হরমনাল পরিবর্তনের ভেতর দিয়ে যায়। এটা হয় শরীরকে গর্ভধারণের জন্য প্রস্তুত করতে। তাই মাসিক এর প্রথম দিনকেই গর্ভধারণের প্রথম দিন হিসেবে ধরা হয়।
বেশীরভাগ মায়েদের ক্ষেত্রেই মাসিক শুরুর ১২-১৪ দিনের মধ্যেই ডিম্বাণু উৎপন্ন হয়।\n
এই সপ্তাহে আপনার করনীয়\n\n
আপনার যদি গর্ভধারণের পরিকল্পনা থাকে তবে এখন থেকেই সুস্থ লাইফস্টাইল মেনটেইন করার চেষ্টা করুন। ধূমপান ও মাদক থেকে দূরে থাকুন।\n
    </string>
    <string name="food_text">
        খাবার এর গুরুত্ব\n\n
        You also should avoid eating shark, swordfish, king mackerel, or tilefish. Although fish and shellfish can be an extremely healthy part of your pregnancy diet (they contain beneficial omega-3 fatty acids and are high in protein and low in saturated fat), these types of fish may contain high levels of mercury, which can cause damage to the developing brain of a fetus.\n
    </string>
    <string name="title_activity_pregnancy">Pregnancy</string>
    <string name="title_activity_drs_suggestn2">DrsSuggestn2</string>
    <string name="title_activity_do_pregnancy">DoPregnancy</string>
    <string name="title_activity_dont_do2">DontDo2</string>
    <string name="title_activity_firstweek_growth">FirstweekGrowth</string>
    <string name="title_activity_growth_info2">GrowthInfo2</string>
    <string name="title_activity_second_week">SecondWeek</string>
    <string name="title_activity_third_week">ThirdWeek</string>
    <string name="title_activity_likes"> ভালোলাগা </string>
    <string name="title_activity_view_place2">পছন্দের জায়গা </string>
    <string name="about_us">Any pregnant women can know any information about pregnancy.You just need to press the button of our app.The information provide here is verified by a gynecologist\nyou may help us by giving your precious feedback.\nThis app is developed by\n</string>
    <string name="developer">Musfika Rahman Ananna(musfika.ananna2015@gmail.com)\nNusrat Jahan(jahannira@gmail.com)\nUmme Salma Fariha(salmafariha13@gmail.com).</string>
</resources>
