<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:weightSum="3"
    tools:context="com.myapp.pregnancyapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <Button
            android:id="@+id/pre_pregnancyId"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="55dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/awarness_icon"
            android:text="@string/prepregnancy_button"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/doctor_suggestId"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/doctor_icon"
            android:onClick="Suggest"
            android:text="@string/doctors_suggestion_button"
            android:textSize="14sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/baby_growthId"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/baby_growth_icon"
            android:text="@string/baby_button"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"
        android:padding="10dp">
        <Button
            android:id="@+id/food_valueId"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/food_icon"
            android:gravity="center"
            android:text="@string/food_value_button"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <Button
        android:id="@+id/medicine_alarmId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/medicine_icon"
        android:text="@string/medicine_alarm_button"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/spaceId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="115dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="10dp"
        android:drawableLeft="@drawable/vr_i_icon"
        android:layout_marginTop="5dp"
        android:text="@string/space_button"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    </LinearLayout>
    </LinearLayout>

